# nucleo-f446re-st7735spi-shield

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  flash.sh.cmake
Inc/: app_state.h  buttons.h  eeprom_i2c.h  fonts.h  form_bench.h  form_defs.h  form_test_image_wb.h  form_test_text.h  form_test_text_freesans_hints_auto.h  form_test_text_freesans_hints_mono.h  form_test_text_freeserif_hints_auto.h  form_test_text_freeserif_hints_mono.h  form_test_text_notosans_hints_auto.h  form_test_text_notosans_hints_mono.h  form_test_text_notoserif_hints_auto.h  form_test_text_notoserif_hints_mono.h  form_test_text_ru.h  gfx.h  mcu_defs.h  rgbcolor.h  st7735_cmds.h  st7735_hwspi.h  stm32f4xx_i2c_simple.h  stm32f4xx_it.h  systick_delay_ms.h  utf8_proc.h  vga_palette.h
Src/: CMakeLists.txt  eeprom_i2c.c  fonts.c  form_bench.c  form_defs.c  form_test_image_wb.c  form_test_text.c  form_test_text_freesans_hints_auto.c  form_test_text_freesans_hints_mono.c  form_test_text_freeserif_hints_auto.c  form_test_text_freeserif_hints_mono.c  form_test_text_notosans_hints_auto.c  form_test_text_notosans_hints_mono.c  form_test_text_notoserif_hints_auto.c  form_test_text_notoserif_hints_mono.c  form_test_text_ru.c  gfx.c  main.c  rgbcolor.c  st7735_hwspi.c  stm32f4xx_i2c_simple.c  stm32f4xx_it.c  system_stm32f4xx.c  utf8_proc.c
cmake/toolchains/: gnu-rm-arm-none-eabi-10.3-2021.10.linux64.cmake  gnu-rm-arm-none-eabi-10.3-2021.10.win32.cmake  gnu-tools-arm-none-eabi-10.3-2021.07.linux64.cmake  gnu-tools-arm-none-eabi-10.3-2021.07.win32.cmake  mingw-w64-x86_64-arm-none-eabi-toolchain.cmake
fonts/: FreeSans6pt7b.h  FreeSans6pt7b_hintingauto.h  FreeSans9pt7b.h  FreeSans9pt7b_hintingauto.h  FreeSansBold6pt7b_hintingauto.h  FreeSansBold9pt7b.h  FreeSansBold9pt7b_hintingauto.h  FreeSansBoldOblique6pt7b.h  FreeSansBoldOblique6pt7b_hintingauto.h  FreeSansBoldOblique9pt7b.h  FreeSansBoldOblique9pt7b_hintingauto.h  FreeSansOblique6pt7b.h  FreeSansOblique6pt7b_hintingauto.h  FreeSansOblique9pt7b.h  FreeSansOblique9pt7b_hintingauto.h  FreeSerif6pt7b.h  FreeSerif6pt7b_hintingauto.h  FreeSerif9pt7b.h  FreeSerif9pt7b_hintingauto.h  FreeSerifBold6pt7b.h  FreeSerifBold6pt7b_hintingauto.h  FreeSerifBold9pt7b.h  FreeSerifBold9pt7b_hintingauto.h  FreeSerifBoldItalic6pt7b.h  FreeSerifBoldItalic6pt7b_hintingauto.h  FreeSerifBoldItalic9pt7b.h  FreeSerifBoldItalic9pt7b_hintingauto.h  FreeSerifItalic6pt7b.h  FreeSerifItalic6pt7b_hintingauto.h  FreeSerifItalic9pt7b.h  FreeSerifItalic9pt7b_hintingauto.h  NotoSans-Bold-14pt-ascii+degree+rus.h  NotoSans-Bold-7pt-ascii+degree+rus.h  NotoSans-Bold6pt7b.h  NotoSans-Bold6pt7b_hintingauto.h  NotoSans-Bold9pt7b.h  NotoSans-Bold9pt7b_hintingauto.h  NotoSans-BoldItalic-14pt-ascii+degree+rus.h  NotoSans-BoldItalic-7pt-ascii+degree+rus.h  NotoSans-BoldItalic6pt7b.h  (+31 more)
